--- a/app/javascript/dashboard/i18n/locale/en/inboxMgmt.json
+++ b/app/javascript/dashboard/i18n/locale/en/inboxMgmt.json
@@ -53,8 +53,8 @@
       "LOADING_FB": "Authenticating you with Facebook...",
       "ERROR_FB_AUTH": "Something went wrong, Please refresh page...",
       "CREATING_CHANNEL": "Creating your Inbox...",
-      "TITLE": "Configure Inbox Deatails",
-      "DESC": "an addendum to this post, you can absolutely support what I’m doing by working with me at Reach by Creatomic. Get in touch: jon@creatomic.co for content, podcasts, marketing campaigns — we do a lot and we do it well. If you can help me hit that monthly rev. target by letting me help you find more customers and make more money, that’s a win win."
+      "TITLE": "Configure Inbox Details",
+      "DESC": ""
     },
     "AGENTS": {
       "ADD_AGENTS": "Adding Agents to your Inbox..."
@@ -67,6 +67,12 @@
     },
     "REAUTH": "Reauthorize",
     "VIEW": "View",
+    "EDIT": {
+      "API": {
+        "SUCCESS_MESSAGE": "Widget color updated successfully",
+        "ERROR_MESSAGE": "Could not update widget color. Please try again later."
+      }
+    },
     "DELETE": {
       "BUTTON_TEXT": "Delete",
       "CONFIRM": {
